--- a/Login_Final/main.html
+++ b/Login_Final/main.html
@@ -3,10 +3,18 @@
     <meta name = "viewport" content = "width = device-width, initial-scale = 1.0, user-scalable = no">
     <script>
         function myFunction(){
-          var x = document.getElementById('email').value;
-          console.log(x);
-          var y = document.getElementById('pwd').value;
-          console.log(y);
+            var x = document.getElementById('email').value;
+            console.log(x);
+            var y = document.getElementById('pwd').value;
+            console.log(y);
+            var b = sessionStorage.getItem('b');
+            var c = sessionStorage.getItem('c');
+            if (x==b && y==c) {
+                window.alert("Your details are valid");
+            }
+            else {
+                window.alert("Your details are invalid");
+            }
         }
     </script>
     <style>
@@ -26,12 +34,15 @@
     input{
         height: 20px;
         width: 200px;
-        background-color: #262626;
-        border-color: lightgray;
+        padding: 15px;
+        background-color: #1f1f1f;
         border-radius: 5px;
-        border-width: 1px;
         color: whitesmoke;
         margin-bottom: 5px;
+        border: none;
+    }
+    input:active{
+        background-color: #1d1d1d;
     }
     #button{
         background: -webkit-linear-gradient(left, rgb(212, 0, 255) , blue);
@@ -45,6 +56,7 @@
         margin-bottom: 10px;
         margin-top: 25px;
         color: whitesmoke;
+        padding: 0px
     }
     img{
         padding-left: 10px;
@@ -61,7 +73,6 @@
     <div id="box1">
         <img src="csi-logo.png" width="75" height="75">
         <h1>Login</h1>
-
         <input type="email" id="email" placeholder="Email"><br /><br />
         <input type="password" id="pwd" placeholder="Password"><br /><br />
         <input type="button" id="button" onclick="myFunction()" value="Login">
