--- a/Login_Final/signup.html
+++ b/Login_Final/signup.html
@@ -3,12 +3,12 @@
     <meta name = "viewport" content = "width = device-width, initial-scale = 1.0, user-scalable = no">
     <script>
         function myFunction(){
-            var x = document.getElementById('name').value;
-            console.log(x);
-            var y = document.getElementById('email').value;
-            console.log(y);
-            var z = document.getElementById('pwd').value;
-            console.log(z);
+            var a = document.getElementById('name').value;
+            var b = document.getElementById('email').value;
+            var c = document.getElementById('pwd').value;
+            sessionStorage.setItem('b', b)
+            sessionStorage.setItem('c', c)
+            open("main.html", "_self")
         }
     </script>
     <style>
@@ -17,19 +17,22 @@
         background-color: #262626;
         text-align: center;
         font-family: Arial, Helvetica, sans-serif;
-        color:whitesmoke;
+        color: whitesmoke;
         padding-top: 20px;
         padding-bottom: 20px;
     }
     input{
         height: 20px;
         width: 200px;
-        background-color: #262626;
-        border-color: lightgray;
+        padding: 15px;
+        background-color: #1f1f1f;
         border-radius: 5px;
-        border-width: 1px;
         color: whitesmoke;
         margin-bottom: 5px;
+        border: none;
+    }
+    input:active{
+        background-color: #1d1d1d;
     }
     #box1{
         margin-top: 40px;
@@ -47,6 +50,7 @@
         margin-bottom: 10px;
         margin-top: 25px;
         color: whitesmoke;
+        padding: 0px;
     }
     img{
         padding-left: 10px;
@@ -63,7 +67,6 @@
     <div id="box1">
         <img src="csi-logo.png" width="75" height="75">
         <h1>Sign up</h1>
-
         <input type="text" id="name" placeholder="Name"><br /><br />
         <input type="email" id="email" placeholder="Email"><br /><br />
         <input type="password" id="pwd" placeholder="Password"><br /><br />
